@@ -18,6 +18,8 @@
 
 package de.schlund.pfixxml.config;
 
+import de.schlund.pfixcore.generator.IWrapper;
+
 
 /**
  * Provides configuration for {@link de.schlund.pfixcore.generator.IWrapper} instances.
@@ -39,7 +41,7 @@ public interface IWrapperConfig {
      * 
      * @return wrapper class
      */
-    Class getWrapperClass();
+    Class<? extends IWrapper> getWrapperClass();
 
     /**
      * Specifies whether the next page in the current pageflow should be triggered
