@@ -1,3 +1,14 @@
+2007-08-07  Martin Leidig  <mleidig@schlund.de>
+
+	Added missing IWrapper runtime information for auth- and aux-wrappers.
+
+	* src/de/schlund/pfixcore/generator/IWrapperInfo.java
+	* src/de/schlund/pfixcore/workflow/app/DefaultAuthIWrapperState.java
+	* src/de/schlund/pfixcore/util/TransformerCallback.java
+	* src/de/schlund/pfixxml/config/PageRequestConfig.java
+	* src/de/schlund/pfixxml/config/IWrapperConfig.java
+	* src/de/schlund/pfixxml/config/impl/PageRequestConfigImpl.java
+
 2007-08-03  termi  <termi@prometheus.local.marsching.com>
 
 	* src/de/schlund/pfixxml/resources/ResourceUtil.java: 
